apps/binks-api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: binks-api-shadow
  namespace: binks-api
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`binks-next.kblab.me`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: binks-api
          port: 80
    - match: Host(`binks-next.kblab.me`) && PathPrefix(`/ws`)
      kind: Rule
      services:
        - name: binks-api
          port: 80
  tls:
    secretName: binks-next-kblab-me-tls
